--- a/views/entrance.ejs
+++ b/views/entrance.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
 	<form action="/pushcard" method="get">
-	 <input type="submit" value="打卡" />
+	 <input style='width:500px;height:360px; font-size:144px;' type="submit" value="Push" />
 	</form>
   </body>
 </html>
