--- a/views/entrance.ejs
+++ b/views/entrance.ejs
@@ -5,8 +5,10 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+  <div style='margin:auto;width:500px;'>
 	<form action="/pushcard" method="get">
 	 <input style='width:500px;height:360px; font-size:144px;' type="submit" value="Push" />
 	</form>
+  </div>
   </body>
 </html>
