--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,11 @@
   <head>
     <title>打卡結果</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script>
+	    setTimeout(function(){
+	        window.location.href = "https://www.pershing.com.tw";
+	    },20000);
+    </script>
   </head>
   <body>
     <h1>打卡</h1>
