--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,5 +12,8 @@
   <body>
     <h1>打卡</h1>
     <p><%= ans %></p>
+    <form action="/pushcard" method="get">
+	 <input style='width:300px;height:200px; font-size:100px;' type="submit" value="OK" />
+    </form>
   </body>
 </html>
