--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui" />
+    <link rel="icon" type="image/jpeg" href="https://png.clipart.me/istock/previews/4795/47955634-check-list-icon.jpg">
     <title>打卡結果</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script>
